@@ -1,3 +1,8 @@
+2007-06-08 [wwp]	2.9.2cvs48
+
+	* src/common/socket.c
+		Don't crash if fork() fails, thanks to Colin.
+
 2007-06-08 [wwp]	2.9.2cvs47
 
 	* src/gtk/prefswindow.c
